# PuddingClaw

./: .dockerignore  .gitignore  PROJECT_ARCHITECTURE.md  README.md  docker-compose.infra.yml  docker-compose.yml  logging.yaml
backend/: .env.example  Dockerfile  SKILLS_SNAPSHOT.md  app.py  capabilities.py  config.json.example  config.py  higress_config_reader.py  pyproject.toml  reminder_analysis.json  requirements.txt  tasks.json
backend/api/: agent.py  capabilities.py  chat.py  compress.py  config_api.py  eval_api.py  files.py  mcp.py  projects.py  sessions.py  skills_api.py  stats_api.py  tokens.py
backend/graph/: agent.py  citations.py  deepagents_manager.py  llm_input_logger.py  mem0_manager.py  memory_indexer.py  prompt_builder.py  session_manager.py  smart_extractor.py  token_usage_store.py  tool_result_adapter.py
backend/graph/middlewares/: __init__.py  cache.py  compression.py  skills_router.py  task_state.py  todo.py
backend/llm/: __init__.py  embed_client.py  model_client.py
backend/mcp_clients/: __init__.py  servers.py
backend/projects/: __init__.py  registry.py
backend/prompts/: AGENTS.md  IDENTITY.md
backend/scripts/: test_higress_thinking.py
backend/skills/aihot/: SKILL.md
backend/skills/aihot/scripts/: aihot_query.py
backend/skills/get-date/: demo.py  test_skill.py
backend/skills/get-date/agents/: openai.yaml
backend/skills/get-date/references/: time_formats.md
backend/skills/get-date/scripts/: get_datetime.py
backend/skills/get_date/: README.md  SKILL.md
backend/skills/get_date/assets/: output_templates.md
backend/skills/get_date/references/: intent_patterns.md
backend/skills/get_date/scripts/: get_datetime.py
backend/skills/get_weather/: SKILL.md
backend/skills/get_weather/evals/: evals.json
backend/skills/github-monitor/: SKILL.md
backend/skills/github-monitor/references/: repos.yaml
backend/skills/github-monitor/scripts/: fetch_github.py  store_kb.py
backend/skills/web-tools-guide/: SKILL.md
backend/skills/web-tools-guide/references/: web-search-config.md
backend/skills/web-tools-guide/scripts/: setup-opencli.sh
backend/tests/: smoke_cache_hit.py  test_aihot_skill.py  test_capabilities.py  test_citations.py  test_context_optimizations.py  test_deepagents_manager.py  test_gateway_settings.py  test_model_client.py  test_model_client_chat_model.py  test_session_manager.py  test_terminal_tool.py  test_todo_middleware.py  测试用例手册.md
backend/tests/integration/: test_model_client_deepagents_latest.py
backend/tools/: __init__.py  create_skill_version_tool.py  deep_research_tool.py  execute_skill_tool.py  fetch_url_tool.py  memory_tools.py  mineru_tool.py  python_repl_tool.py  read_file_tool.py  search_knowledge_tool.py  skills_scanner.py  task_manager_tool.py  tavily_search_tool.py  terminal_tool.py  write_file_tool.py
backend/utils/: file_cache.py
backend/workspace/: AGENTS.md
docs/: ARCHITECTURE.md  agent引用来源面板技术方案与开发计划.md  backend架构讲解文档.md  context-engineering-design.md  deepagents-project-memory.md  haode-agent-improvement-plan.md  new-chat-without-creating-session.md  notebook-modelclient-deepagents-integration.md  puddingclaw-ui-workspace-roadmap.md  test-plan-skills.md  ui-segment-rendering.md  开源项目结构与可选基础设施方案.md  知识库双管道技术方案与实施计划.md
electron/: electron.d.ts  main.js  package-lock.json  package.json  preload.js
frontend/: .env.example  Dockerfile  next.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
migration/: README_Migration_Guide.md  api_chat.py  config_patch.py  config_patch_with_mcp.py  context-engineering-design.md  frontend_adapter.md  graph_agent.py  graph_agent_with_mcp.py  graph_prompt_builder.py  (+4 more)
(+69 files in other folders)
