[project]
name = "puddingclaw-backend"
version = "0.1.0"
description = "PuddingClaw backend API, agent, and knowledge base services"
readme = "../README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [
    { name = "PuddingClaw Team" },
]
keywords = ["agent", "rag", "knowledge-base", "llm"]

dependencies = [
    # Web framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sse-starlette>=3.3.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27,<0.29",

    # Data validation & settings
    "pydantic>=2.12.0",
    "pydantic-settings>=2.13.0",
    "python-dotenv>=1.0.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.48",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.22.0",

    # LangChain / LangGraph
    "langchain>=1.2.0",
    "langchain-core>=1.2.0",
    "langchain-community>=0.4.0",
    "langchain-deepseek>=1.0.0",
    "langchain-openai>=1.1.0",
    "langchain-mcp-adapters>=0.1.0",
    "langgraph>=1.1.0",
    "langsmith>=0.7.0",

    # LLM provider SDKs
    "openai>=2.28.0",

    # LlamaIndex (knowledge base & memory indexing)
    "llama-index-core>=0.14.17",
    "llama-index-embeddings-openai>=0.6.0",

    # Memory
    "mem0ai>=1.0.9",

    # Context engineering / token counting
    # 注意：transformers 必须保持与 MinerU 兼容（MinerU 目前要求 <5.0.0）
    "transformers>=4.57.3,<5.0.0",
    "tokenizers>=0.22.0",
    "safetensors>=0.7.0",
    "tiktoken>=0.12.0",

    # Document / media processing
    "pillow>=12.0.0",
    "beautifulsoup4>=4.14.0",
    "html2text>=2025.0.0",
    "lxml>=6.0.0",
    "PyYAML>=6.0.0",
    "filetype>=1.2.0",

    # Utilities
    "aiohttp>=3.13.0",
    "anyio>=4.12.0",
    "tenacity>=9.0.0",
    "tqdm>=4.67.0",
    "xxhash>=3.4.0",
    "uuid-utils>=0.14.0",
]

[project.optional-dependencies]
# PDF rich parsing via MinerU (base package, no vllm/lmdeploy GPU backends).
# Recommended for macOS/CPU. For Linux/Windows GPU acceleration, install
# `mineru[all]` separately; it currently conflicts with this project's
# openai>=2.28.0 / llama-index-core setuptools constraints.
mineru = [
    "mineru>=3.0",
]

# Milvus vector store (optional infrastructure; pinned versions).
# Note: llama-index-vector-stores-milvus currently requires pymilvus<3.
milvus = [
    "pymilvus==2.6.15",
    "llama-index-vector-stores-milvus==1.1.0",
]

[project.scripts]
puddingclaw-api = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# 后端是扁平多包应用，显式声明需要打进 editable wheel 的模块/包。
only-include = [
    "app.py",
    "capabilities.py",
    "api",
    "graph",
    "knowledge",
    "llm",
    "mcp_clients",
    "memory",
    "prompts",
    "sessions",
    "skills",
    "storage",
    "tests",
    "tools",
    "utils",
    "workspace",
]

[tool.uv]
# uv 管理项目依赖
managed = true

[dependency-groups]
# 开发/测试依赖（不影响生产环境）
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.6.0",
    "mypy>=1.0.0",
]

# Optional latest-DeepAgents compatibility test environment.
# Keep this out of production dependencies until DeepAgents is adopted by runtime code.
deepagents-test = [
    "deepagents==0.6.11",
    "ipykernel>=7.0.0",
    "langgraph-cli>=0.1.0",
]

[tool.uv.pip]
# 国内用户可加速 PyTorch 下载
extra-index-url = [
    "https://download.pytorch.org/whl/cpu",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
